package Excepciones;

public class InputInvalido extends Exception{
    public InputInvalido (String message){
        super (message);
    }
}
