package Excepciones;

public class ProcesoDesconocido extends Exception{
    public ProcesoDesconocido(String message) {
        super(message);
    }
}
