package Excepciones;

public class ProcesoNoImplementado extends Exception{
    public ProcesoNoImplementado(String message){
        super (message);
    }
}
