package Excepciones;

public class ProcesoSinEspecificar extends Exception{
    public  ProcesoSinEspecificar(String message) {
        super(message);
    }
}
